# pixelbox

./: MANIFEST.in  Makefile  README.md  pyproject.toml  version.py
pixelbox/: appstyle.py  linux_launcher.py  macos_launcher.py  main.py  resource.py  version.py  windows_launcher.py
pixelbox/resources/: icon.icns
